# fontflash

./: README.md  index.html  package-lock.json  package.json  run-on-build.bat  run_on_build.py
src/: App.vue  layout.css  main.js  reset.css  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: dirs.rs  font_name.rs  main.rs
src-tauri/src/ps-script/: Add-Font.ps1
src/assets/fonts/: fonts.css
src/assets/icons/: icons.css
src/components/: Main.vue  Preview.vue  Sidebar.vue  Titlebar.vue  Viewer.vue
src/components/scripts/: fontLoader.js  window.js
src/components/stylesheets/: default.css  reset.css  stylepreview.html
src/data/: version.json
